--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
-    "express": "^4.18.2",
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.1",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.8.1",
     "socket.io": "^4.5.4"
   },
